@@ -8,6 +8,7 @@ Release History
 - Fix build failures with LANG=C (#13140).
 - Remove length limitation of perfdata labels (#13214).
 - Fix formatting of large integers as Metric values (#13287).
+- Range: allow simple numerals as argument to Range() (#12658).
 
 
 1.2 (2013-11-08)
